Introduction of the MicroFramework
fix severals bug in JSON loader

cleanup API
cleanup API packages names

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/FactoryAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/FactoryAPI.vm
@@ -6,7 +6,7 @@
 
 package ${packageName};
 
-trait ${formatedFactoryName} : ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.factory.KMFFactory {
+trait ${formatedFactoryName} : org.kevoree.modeling.api.KMFFactory {
 
     fun getVersion() : String
 
