--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/XMIResolveCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/XMIResolveCommand.vm
@@ -2,7 +2,7 @@
 #* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
 package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.loader
 
-public class XMIResolveCommand(val context : LoadingContext, val target : ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.container.KMFContainer, val mutatorType : Int, val refName : String, val ref : String) : ResolveCommand {
+public class XMIResolveCommand(val context : LoadingContext, val target : org.kevoree.modeling.api.KMFContainer, val mutatorType : Int, val refName : String, val ref : String) : ResolveCommand {
     override fun run() {
         var referencedElement = context.map.get(ref)
         if(referencedElement != null) {
