--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/jsIO/java.lang.StringBuilder.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/jsIO/java.lang.StringBuilder.vm
@@ -1,8 +1,8 @@
 package java.lang;
 
-public class StringBuilder(val base : String) {
+public class StringBuilder() {
 
-    var content = base
+    var content = ""
 
     fun append(sub : String){
         content = content + sub
