--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
@@ -1,4 +1,3 @@
-
 #* @vtlvariable name="formatedFactoryName" type="java.lang.String" *#
 #* @vtlvariable name="packElem" type="java.lang.String" *#
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
@@ -9,7 +8,12 @@ package ${packElem};
 import java.util.*;
 import java.lang.*;
 
+#if(${ctx.usemicrofwk()})
+public interface ${formatedFactoryName} extends org.kevoree.modeling.api.${formatedFactoryName} {
+#else
 public interface ${formatedFactoryName} {
+#end
+
 
 public void setRecursiveReadOnly();
 public ${formatedFactoryName} eContainer();
@@ -42,26 +46,37 @@ public Iterable<${packElem}.${formatedFactoryName}> containedElements();
 public Iterable<${packElem}.${formatedFactoryName}> containedAllElements();
 
 @org.jetbrains.annotations.NotNull
-public List<Object> containedElementsList();
+public List
+<Object> containedElementsList();
 
-#if(${ctx.genSelector})
-    @org.jetbrains.annotations.NotNull
-    public List<Object> selectByQuery(@org.jetbrains.annotations.NotNull String query);
-#end
+    #if(${ctx.genSelector})
+        @org.jetbrains.annotations.NotNull
+        public List
+    <Object> selectByQuery(@org.jetbrains.annotations.NotNull String query);
+    #end
 
-public <A> A findByPath(@org.jetbrains.annotations.NotNull String query, @org.jetbrains.annotations.NotNull Class<A> clazz);
+    public <A> A findByPath(@org.jetbrains.annotations.NotNull String query, @org.jetbrains.annotations.NotNull Class<A>
+        clazz);
 
-Object findByPath(@org.jetbrains.annotations.NotNull String query);
-public String path();
+        Object findByPath(@org.jetbrains.annotations.NotNull String query);
+        public String path();
 
 
-#if(${ctx.generateEvents()})
-    public void addModelElementListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.events.ModelElementListener lst);
-    public void removeModelElementListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.events.ModelElementListener lst);
-    public void removeAllModelElementListeners();
-    public void addModelTreeListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.events.ModelTreeListener lst);
-    public void removeModelTreeListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.events.ModelTreeListener lst);
-    public void removeAllModelTreeListeners();
-#end
+        #if(${ctx.generateEvents()})
+            public void
+            addModelElementListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}
+            .events.ModelElementListener lst);
+            public void
+            removeModelElementListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}
+            .events.ModelElementListener lst);
+            public void removeAllModelElementListeners();
+            public void
+            addModelTreeListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}
+            .events.ModelTreeListener lst);
+            public void
+            removeModelTreeListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}
+            .events.ModelTreeListener lst);
+            public void removeAllModelTreeListeners();
+        #end
 
-}
+        }
