--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/JSONResolveCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/JSONResolveCommand.vm
@@ -2,12 +2,12 @@
 #* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
 package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.loader
 
-public class JSONResolveCommand(val context : LoadingContext, val target : ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.container.KMFContainer, val mutatorType : Int, val refName : String, val ref : String) : ResolveCommand {
+public class JSONResolveCommand(val context : LoadingContext, val target : org.kevoree.modeling.api.KMFContainer, val mutatorType : Int, val refName : String, val ref : String) : ResolveCommand {
     override fun run() {
         var referencedElement = context.map.get(ref)
         var i = 0
         while(referencedElement == null && i < context.loadedRoots.size()) {
-            referencedElement = (context.loadedRoots.get(i++) as? ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.container.KMFContainer)?.findByPath(ref)
+            referencedElement = (context.loadedRoots.get(i++) as? org.kevoree.modeling.api.KMFContainer)?.findByPath(ref)
         }
 
         if(referencedElement != null) {
