--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/Lexer.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/Lexer.vm
@@ -93,7 +93,7 @@ public class Lexer(val inputStream : InputStream) {
         }
         var tokenType = Type.EOF
         var c = nextChar()
-        var currentValue = java.lang.StringBuilder("")
+        var currentValue = java.lang.StringBuilder()
         var jsonValue: Any? = null
         while (! isDone() && isSpace(c)) {
             c = nextChar()
