--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/JSONResolveCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/JSONResolveCommand.vm
@@ -4,17 +4,16 @@ package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.loader
 
 public class JSONResolveCommand(val context : LoadingContext, val target : org.kevoree.modeling.api.KMFContainer, val mutatorType : Int, val refName : String, val ref : String) : ResolveCommand {
     override fun run() {
-        var referencedElement = context.map.get(ref)
+        var referencedElement : Any? = null
         var i = 0
         while(referencedElement == null && i < context.loadedRoots.size()) {
             referencedElement = (context.loadedRoots.get(i++) as? org.kevoree.modeling.api.KMFContainer)?.findByPath(ref)
         }
-
         if(referencedElement != null) {
             target.reflexiveMutator(mutatorType,refName, referencedElement)
             return
         }
-
+        /*
         if(ref.equals("/0/") || ref.equals("/")) {
             referencedElement = context.map.get("/0")
             if(referencedElement != null)   {
@@ -22,7 +21,7 @@ public class JSONResolveCommand(val context : LoadingContext, val target : org.k
                 return
             }
         }
-
+         */
         throw Exception("KMF Load error : reference " + ref + " not found in map when trying to " + mutatorType + " "+refName+" on " + target.toString())
     }
 }
