Add Long support for JVM & JS platform #thx thomas for the bug repport

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/jsIO/java.io.PrintStream.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/jsIO/java.io.PrintStream.vm
@@ -25,6 +25,10 @@ fun print(s: Int) {
 result = result + s
 }
 
+fun print(s: Long) {
+result = result + s
+}
+
 fun print(s: Boolean) {
 if(s){
 result = result + "true"
