--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/TraceCompareMethod.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/TraceCompareMethod.vm
@@ -18,8 +18,8 @@ override fun generateDiffTraces(similarObj : ${ctx.getKevoreeContainer().get()}?
     var attVal : Any? = null;
     var attVal2 : Any? = null;
     var attVal2String : String? = null;
-    var hashLoop : java.util.HashSet<String>? = null;
-    var hashResult : java.util.HashSet<String>? = null;
+    var hashLoop : java.util.HashMap<String,org.kevoree.modeling.api.KMFContainer>? = null;
+    var hashResult : java.util.HashMap<String,org.kevoree.modeling.api.KMFContainer>? = null;
 
      #foreach( $att in $currentClass.eAllAttributes )
           attVal = get${att.getName().substring(0, 1).toUpperCase()}${att.getName().substring(1)}()
@@ -38,32 +38,34 @@ override fun generateDiffTraces(similarObj : ${ctx.getKevoreeContainer().get()}?
      #foreach( $ref in $currentClass.eAllReferences )
          #if(!$ref.isContainment());
               #if($ref.isMany())
-                  hashLoop = java.util.HashSet<String>()
-                  hashResult = java.util.HashSet<String>()
+                  hashLoop = java.util.HashMap<String,org.kevoree.modeling.api.KMFContainer>()
+                  hashResult = java.util.HashMap<String,org.kevoree.modeling.api.KMFContainer>()
                   for(elem in get${ref.getName().substring(0, 1).toUpperCase()}${ref.getName().substring(1)}()){
                       val elemPath = elem.path()
                       if(elemPath != null){
-                        hashLoop!!.add(elemPath)
+                        hashLoop!!.put(elemPath,elem)
                       }
                   }
                   if(similarObjCasted != null){
                     for(elem in similarObjCasted!!.get${ref.getName().substring(0, 1).toUpperCase()}${ref.getName().substring(1)}()){
                         val elemPath = elem.path()
                         if(elemPath != null){
-                        if(hashLoop!!.contains(elemPath)){
+                        if(hashLoop!!.containsKey(elemPath)){
                           if(inter){
-                             hashResult!!.add(elemPath)
+                             hashResult!!.put(elemPath,elem)
                           }
                        } else {
                           if(!inter){
-                            hashResult!!.add(elemPath)
+                            hashResult!!.put(elemPath,elem)
                           }
                        }
                         }
                     }
                   }
                   if(hashResult!!.size != 0){
-                    traces.add(org.kevoree.modeling.api.trace.ModelAddAllTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_$ref.getName(),hashResult!!.toList(),null))
+                    for(hashLoopRes in hashResult!!.keySet()){
+                        traces.add(org.kevoree.modeling.api.trace.ModelAddTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_$ref.getName(),hashLoopRes,hashResult!!.get(hashLoopRes)!!.metaClassName()))
+                    }
                   }
               #else
                   attVal = null;
